# redacted-context-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_INVARIANTS.md  SETUP.md  pyproject.toml
.github/workflows/: test.yml
examples/: agent-AGENTS.md  agent-CLAUDE.md  claude-settings.example.json  codex-config.example.toml  mcp.installed.json  mcp.source.json  redaction-config.toml
src/redacted_context_mcp/: __init__.py  config.py  core.py  defaults.py  discovery.py  filesystem.py  github.py  limits.py  models.py  paths.py  redaction.py  server.py
tests/: fixtures.py  test_cli.py  test_discovery.py  test_followup_hardening.py  test_github.py  test_mcp.py  test_redaction.py  test_security_hardening.py
